# WES

./: .gitignore  PROJECT_STRUCTURE.md  partition-table.csv  partitions.csv
.cache/clangd/index/: app_main.c.53DF7C82628EC5ED.idx  buttons.c.39A5B1B8A6E5127F.idx  buttons.h.F0BEE4AF888D9039.idx  disp_driver.c.B2DA2144390D89EF.idx  disp_driver.h.8317C2A5E28177B5.idx  disp_spi.c.0E1035623B70DBCB.idx  disp_spi.h.D222E1DD4E3B68E7.idx  (+388 more)
.claude/: settings.local.json
components/accelerometer/: CMakeLists.txt  accelerometer.c  accelerometer.h
components/buttons/: CMakeLists.txt  buttons.c  buttons.h
components/joystick/: CMakeLists.txt  joystick.c  joystick.h
components/max98357a/: CMakeLists.txt  max98357a.c  max98357a.h
components/memory/: CMakeLists.txt  memory.c  memory.h
components/mqtt_client_bl/: CMakeLists.txt  mqtt_client_bl.c  mqtt_client_bl.h
components/sht31/: CMakeLists.txt  Kconfig  sht31.c  sht31.h
components/sleep_timer/: CMakeLists.txt  sleep_timer.c  sleep_timer.h
components/step_counter/: CMakeLists.txt  step_counter.c  step_counter.h
components/tetris/: CMakeLists.txt  tetris_engine.c  tetris_engine.h
components/ui_app/: CMakeLists.txt  memory_ui_draw.c  memory_ui_draw.h  tetris_ui_draw.c  tetris_ui_draw.h  ui_app.c
components/ui_app/squareline/: CMakeLists.txt  project.info  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
components/ui_app/squareline/images/: ui_img_bl_logo_symbol_png.c  ui_img_colorwheel_icon_png.c  ui_img_home_icon_png.c  ui_img_settings_icon_png.c
components/ui_app/squareline/project/: CMakeLists.txt  esp32_gui.sll  esp32_gui.slp  esp32_gui.spj  filelist.txt  project.info  ui.c  ui.h  ui_events.c  ui_events.h
components/ui_app/squareline/project/images/: ui_img_1108033562.c  ui_img_1392414027.c  ui_img_1568848321.c  ui_img_1995866322.c  ui_img_289807621.c  ui_img_527192083.c  ui_img_702957783.c  ui_img_back_button_30x30_png.c  ui_img_klavijatura_icon_80x80_png.c  ui_img_memory_game_80x80_png.c  ui_img_messages_icon_80x80_png.c  ui_img_sos_120x120_png.c  ui_img_sos_30x30_png.c  ui_img_sos_icon_120x120_png.c  ui_img_tetris_icon_80x80_png.c  ui_img_wp2844947_png.c
components/ui_app/squareline/project/screens/: ui_HomePage.c  ui_HomePage.h  ui_HomePage2.c  ui_HomePage2.h  ui_Home_Scr.h  ui_KameraScreen.c  ui_KameraScreen.h  ui_KlavijaturaScreen.c  ui_KlavijaturaScreen.h  ui_KoraciScreen.c  ui_KoraciScreen.h  ui_MemoryScreen.c  ui_MemoryScreen.h  ui_Poruke1.c  ui_Poruke1.h  ui_PorukeScreen.c  ui_PorukeScreen.h  ui_SOSScreen.c  ui_SOSScreen.h  ui_Settings_Scr.h  ui_TemperaturaScreen.c  ui_TemperaturaScreen.h  ui_TetrisScreen.c  ui_TetrisScreen.h  ui_VoiceChangerScreen.c  ui_VoiceChangerScreen.h
components/ui_app/squareline/screens/: ui_Color_Scr.c  ui_Color_Scr.h  ui_Home_Scr.c  ui_Home_Scr.h  ui_Settings_Scr.c
components/wifi_station/: wifi_station.c
main/: CMakeLists.txt  app_main.c  gui.c  nav.c  nav.h
